--- a/alura-start-storytelling-1-unidade_10/index.html
+++ b/alura-start-storytelling-1-unidade_10/index.html
@@ -28,3 +28,5 @@
     <script type="module" src="graficos/quantidadeUsuarios.js"></script>
 </body>
 </html>
+<img>primeira imagem grande</h1>
+<img src="style.css" alt="">imagem grande 
